# ProjectM

./: .gitignore  CMakeLists.txt  main.cpp
Game/Enemies/: Enemy.h
Game/Engine/: Character.h  Constants.h  EnemiesManager.h  GameObject.h  PlayerController.h  Timer.h  ViewController.h  World.h
Game/Player/: Player.h  Textures.h
Game/Sources/: Bullet.cpp  Character.cpp  EnemiesManager.cpp  Enemy.cpp  GameObject.cpp  HealthBar.cpp  Player.cpp  PlayerController.cpp  RangedWeapon.cpp  Textures.cpp  Timer.cpp  ViewController.cpp  Weapon.cpp  World.cpp
Game/UI/: HealthBar.h
Game/Weapon/: Bullet.h  RangedWeapon.h  Weapon.h
